# IntegralCount

./: CMakeLists.txt  check_err.cpp  file_wr.cpp  function.cpp  input.txt  integral_count.cpp  main.cpp  output.txt  parsing_error.cpp  run.sh  script.py
